# yt_subtitles_parser

./: README.md  parser.py  pyproject.toml
