[tool.poetry]
name = "yt-subtitles-parser"
version = "0.1.0"
description = "Parse YouTube videos by subtitles using Python 3"
authors = ["tinytengu <tinytengu@yandex.ru>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "yt_subtitles_parser"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
bs4 = "^0.0.1"
lxml = "^4.9.1"
pycodestyle = "^2.9.1"
black = "^22.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
